--- a/header-mob.html
+++ b/header-mob.html
@@ -8,7 +8,7 @@
 </head>
 <div id="header-mob">
   <div id="mob-menu">
-    <p class="close"><img src="img/btn_gnb_close.png" alt="메뉴닫기버튼" onclick="HideMenu()"></a></p>
+    <p class="close"><img src="img/btn_gnb_close.png" alt="메뉴닫기버튼"></a></p>
     <div class="mob-menu-slide">
 
 
@@ -21,20 +21,21 @@
 
       <ul class="drop-menu">
 
-        <li class="drop-menu__title" id="frist-menu"><a href="#">My Starbucks<span class="drop-btn"><img
+        <li class="drop-menu__title" id="frist-menu"><a href="#">My Starbucks<span class="drop-btn"><img id="btn_w"
                 src="img/mob_gnb_arrow_down_w.png" alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
 
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
-            <li class="drop-menu__txt"><a href="#">My 리워드<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
-                    alt="메뉴드롭다운 버튼 "></span></a>
+            <li class="drop-menu__txt"><a href="#">My 리워드<span class="drop-btn"><img id="btn_g"
+                    src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">리워드 및 혜택</a></li>
                 <li><a href="#">별 히스토리</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">My 스타벅스 카드<span class="drop-btn"><img
-                    src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
+            <li class="drop-menu__txt"><a href="#">My 스타벅스 카드
+                <span class="drop-btn">
+                  <img id="btn_g" src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">보유 카드</a></li>
                 <li><a href="#">카드 등록</a></li>
@@ -43,7 +44,7 @@
               </ul>
             </li>
 
-            <li class="drop-menu__txt"><a href="#">My 스타벅스 e-Gift Card <span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">My 스타벅스 e-Gift Card <span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">선물 하기</a></li>
@@ -51,8 +52,8 @@
                 <li><a href="#">장바구니 내역</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">My 쿠폰<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
-                    alt="메뉴드롭다운 버튼 "></span></a>
+            <li class="drop-menu__txt"><a href="#">My 쿠폰<span class="drop-btn"><img id="btn_g"
+                    src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">등록하기</a></li>
                 <li><a href="#">선물하기</a></li>
@@ -65,8 +66,8 @@
             <li class="drop-menu__txt"><a href="#">전자영수증</a></li>
             <li class="drop-menu__txt"><a href="#">개인컵 리워드 설정</a></li>
             <li class="drop-menu__txt"><a href="#">My DT Pass</a></li>
-            <li class="drop-menu__txt"><a href="#">개인정보관리<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
-                    alt="메뉴드롭다운 버튼 "></span></a>
+            <li class="drop-menu__txt"><a href="#">개인정보관리<span class="drop-btn"><img id="btn_g"
+                    src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">개인정보확인 및 수정</a></li>
                 <li><a href="#">회원 탈퇴</a></li>
@@ -78,11 +79,11 @@
 
         <!-- /////////////커피시작///////////// -->
 
-        <li class="drop-menu__title"><a href="#">COFFEE<span class="drop-btn"><img src="img/mob_gnb_arrow_down_w.png"
+        <li class="drop-menu__title"><a href="#">COFFEE<span class="drop-btn"><img id="btn_w" src="img/mob_gnb_arrow_down_w.png"
                 alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
-            <li class="drop-menu__txt"><a href="#">커피<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">커피<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">스타벅스 원두</a></li>
@@ -91,14 +92,14 @@
               </ul>
             </li>
             <li class="drop-menu__txt"><a href="#">나와 어울리는 커피</a></li>
-            <li class="drop-menu__txt"><a href="#">스타벅스 리저브&trade;<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">스타벅스 리저브&trade;<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">ABOUT</a></li>
                 <li><a href="#">RESERVE MAGAZINE</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">에스프레소 음료<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">에스프레소 음료<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">도피오</a></li>
@@ -110,7 +111,7 @@
                 <li><a href="#">모카</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">최상의 커피를 즐기는 법<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">최상의 커피를 즐기는 법<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">커피 프레스</a></li>
@@ -120,7 +121,7 @@
                 <li><a href="#">리저브를 매장에서 다양하게 즐기는 법</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">커피 이야기<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">커피 이야기<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">농장에서 우리의 손으로</a></li>
@@ -137,11 +138,11 @@
         <!-- ////////////////////////////////메뉴시작 -->
 
 
-        <li class="drop-menu__title"><a href="#">MENU<span class="drop-btn"><img src="img/mob_gnb_arrow_down_w.png"
+        <li class="drop-menu__title"><a href="#">MENU<span class="drop-btn"><img id="btn_w" src="img/mob_gnb_arrow_down_w.png"
                 alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
-            <li class="drop-menu__txt"><a href="#">음료<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">음료<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">전체보기</a></li>
@@ -157,7 +158,7 @@
                 <li><a href="#">스타벅스 주스(병음료)</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">푸드<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">푸드<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">전체보기</a></li>
@@ -171,7 +172,7 @@
               </ul>
             </li>
 
-            <li class="drop-menu__txt"><a href="#">상품<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">상품<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">전체보기</a></li>
@@ -187,7 +188,7 @@
                 <li><a href="#">시럽</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">카드<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">카드<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">전체보기</a></li>
@@ -195,7 +196,7 @@
                 <li><a href="#">e-Gift 카드</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">메뉴 이야기<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">메뉴 이야기<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">나이트로 콜드브루</a></li>
@@ -209,11 +210,11 @@
         <!-- //////////////////////스토어시작 -->
 
 
-        <li class="drop-menu__title"><a href="#">STORE<span class="drop-btn"><img src="img/mob_gnb_arrow_down_w.png"
+        <li class="drop-menu__title"><a href="#">STORE<span class="drop-btn"><img id="btn_w" src="img/mob_gnb_arrow_down_w.png"
                 alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
-            <li class="drop-menu__txt"><a href="#">매장찾기<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">매장찾기<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">빠른 검색</a></li>
@@ -223,7 +224,7 @@
             <li class="drop-menu__txt"><a href="#">드라이브 스루 매장</a></li>
             <li class="drop-menu__txt"><a href="#">스타벅스 리저브&trade;매장</a></li>
             <li class="drop-menu__txt"><a href="#">커뮤니티 스토어 매장</a></li>
-            <li class="drop-menu__txt"><a href="#">매장 이야기<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">매장 이야기<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">티바나 바 매장</a></li>
@@ -235,12 +236,12 @@
         <!-- /////////////////////////////////리스폰시작 -->
 
 
-        <li class="drop-menu__title"><a href="#">RESPONSIBILITY<span class="drop-btn"><img
+        <li class="drop-menu__title"><a href="#">RESPONSIBILITY<span class="drop-btn"><img id="btn_w"
                 src="img/mob_gnb_arrow_down_w.png" alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
             <li class="drop-menu__txt"><a href="#">사회공헌 캠페인 소개</a></li>
-            <li class="drop-menu__txt"><a href="#">지역 사회 참여 활동<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">지역 사회 참여 활동<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">희망배달 캠페인</a></li>
@@ -251,7 +252,7 @@
                 <li><a href="#">우리 문화 지키기</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">환경보호 활동<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">환경보호 활동<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">친환경 활동</a></li>
@@ -260,7 +261,7 @@
               </ul>
             </li>
 
-            <li class="drop-menu__txt"><a href="#">윤리 구매<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">윤리 구매<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">윤리적 원두 구매</a></li>
@@ -268,7 +269,7 @@
                 <li><a href="#">커피 농가 지원 활동</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">글로벌 사회 공헌<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">글로벌 사회 공헌<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">윤리경영 보고서</a></li>
@@ -282,11 +283,11 @@
         <!-- 리워드시작/////////////////////////// -->
 
 
-        <li class="drop-menu__title"><a href="#">Starbucks Rewards<span class="drop-btn"><img
+        <li class="drop-menu__title"><a href="#">Starbucks Rewards<span class="drop-btn"><img id="btn_w"
                 src="img/mob_gnb_arrow_down_w.png" alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
-            <li class="drop-menu__txt"><a href="#">스타벅스 리워드<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">스타벅스 리워드<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">스타벅스 리워드 소개</a></li>
@@ -295,7 +296,7 @@
                 <li><a href="#">자주 하는 질문</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">스타벅스 카드<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">스타벅스 카드<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">스타벅스 카드 소개</a></li>
@@ -307,7 +308,7 @@
               </ul>
             </li>
 
-            <li class="drop-menu__txt"><a href="#">스타벅스 e-Gift Card<span class="drop-btn"><img
+            <li class="drop-menu__txt"><a href="#">스타벅스 e-Gift Card<span class="drop-btn"><img id="btn_g"
                     src="img/mob_gnb_arrow_down_g.png" alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">스타벅스 e-Gift Card 소개</a></li>
@@ -322,11 +323,11 @@
 
         <!-- /////////////////////////////////////왓츠뉴시작 -->
 
-        <li class="drop-menu__title"><a href="#">WHAT'S NEW<span class="drop-btn"><img
+        <li class="drop-menu__title"><a href="#">WHAT'S NEW<span class="drop-btn"><img id="btn_w"
                 src="img/mob_gnb_arrow_down_w.png" alt="메뉴드롭다운 버튼 "></span></a>
           <ul class="drop-menu__down">
             <li class="drop-menu__txt"><a href="#">한눈에 보기</a></li>
-            <li class="drop-menu__txt"><a href="#">이벤트<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">이벤트<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">전체</a></li>
@@ -335,7 +336,7 @@
                 <li><a href="#">온라인</a></li>
               </ul>
             </li>
-            <li class="drop-menu__txt"><a href="#">뉴스<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">뉴스<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">전체</a></li>
@@ -346,7 +347,7 @@
               </ul>
             </li>
 
-            <li class="drop-menu__txt"><a href="#">매장별 이벤트<span class="drop-btn"><img src="img/mob_gnb_arrow_down_g.png"
+            <li class="drop-menu__txt"><a href="#">매장별 이벤트<span class="drop-btn"><img id="btn_g" src="img/mob_gnb_arrow_down_g.png"
                     alt="메뉴드롭다운 버튼 "></span></a>
               <ul class="drop-menu__down__down">
                 <li><a href="#">일반 매장</a></li>
